--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		<h1 style="text-align: center">My Playlist</h1>
+		<div class="my-play">
+			<ul class="list">
+				<li><a href="" target="_blank">song1</a></li>
+				<li><a href="" target="_blank">song2</a></li>
+				<li><a href="" target="_blank">song3</a></li>
+				<li><a href="" target="_blank">song4</a></li>
+				<li><a href="" target="_blank">song5</a></li>
+			</ul>
+		</div>
+		<h2 style="text-align: center">Now Playing...</h2>
+		<div class="player">
+				
+			<video class="player_one" width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+			<h2 style="text-align: center">MP3 song</h2>
+			<audio class="palyer_two" controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
