--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
-			<h2 style="text-align: center">MP3 song</h2>
+			<h2 style="text-align: center">Mp3 songs</h2>
 			<audio class="palyer_two" controls>
   <source src="horse.ogg" type="audio/ogg">
   <source src="horse.mp3" type="audio/mpeg">
